2018-04-20  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	PR testsuite/85483
	* gcc.target/aarch64/sve/vcond_1.c: Move to...
	* g++.dg/other/sve_vcond_1.C: ... Here.  Add target directives.
	* gcc.target/aarch64/sve/vcond_1_run.c: Move to...
	* g++.dg/other/sve_vcond_1_run.C: ... Here.  Change include file name.

2018-04-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/85469
	* gcc.target/i386/pr85044.c (dg-options): Remove -mibt.
	* gcc.target/i386/sse-26.c (dg-options): Remove -mno-ibt.

2018-04-20  Richard Biener <rguenther@suse.de>

	PR middle-end/85475
	* gcc.dg/torture/pr85475.c: New testcase.

2018-04-20  Martin Jambor  <mjambor@suse.cz>

	ipa/85449
	* gcc.dg/ipa/pr85449.c: New test.

2018-04-20  Martin Jambor  <mjambor@suse.cz>

	ipa/85447
	* g++.dg/ipa/pr85447.C: New file.
	* gcc.dg/ipa/ipcp-self-recursion-1.c: Likewise.

2018-04-20  Jakub Jelinek  <jakub@redhat.com>

	PR c++/85462
	* g++.dg/cpp0x/pr85462.C: New test.

2018-04-19  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/pr85404.c: Require CET target.

2018-04-19  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/85467
	* gcc.dg/pr85467.c: New test.

2018-04-19  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/84611
	* g++.dg/parse/crash68.C: New.

2018-04-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR libgcc/85334
	* g++.dg/torture/pr85334.C: New test.

2018-04-19  Jonathan Wakely  <jwakely@redhat.com>

	PR c++/85464 - missing location for -Wignored-qualifiers diagnostic
	* g++.dg/diagnostic/pr85464.C: New.

2018-04-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/85397
	* gcc.dg/torture/pr85397-1.c: New test.
	* gcc.target/i386/cet-sjlj-6a.c: Adjusted.
	* gcc.target/i386/cet-sjlj-6b.c: Likewise.

2018-04-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/85404
	* gcc.target/i386/pr85404.c: New test.

2018-04-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/85417
	* c-c++-common/attr-nocf-check-1.c: Compile with
	-fcf-protection=none.
	* c-c++-common/attr-nocf-check-3.c: Likewise.